# my-llm

./: .gitignore  .gitmodules  README.md  mise.toml  pyproject.toml
docs/: _config.yml  ch02.html  ch03.html  ch04.html  ch05.html  ch06.html  gpt_download.html  index.md
src/my-llm/: ch02.py  ch03.py  ch04.py  ch05.py  ch06.py  gpt_download.py  japanese.py
src/my-llm/__marimo__/session/: ch02.py.json  ch03.py.json  ch04.py.json  ch05.py.json  ch06.py.json  gpt_download.py.json  my-llm.py.json
src/my_llm/: ch02.py  ch03.py  ch04.py  ch05.py  ch06.py  japanese.py
src/my_llm/__marimo__/session/: ch02.py.json  ch03.py.json  ch05.py.json  ch06.py.json  gpt_download.py.json
