[project]
name = "my-llm"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "marimo[recommended]>=0.18.4",
    "matplotlib>=3.10.8",
    "pandas>=2.3.3",
    "pyzmq",
    "ruff>=0.14.10",
    "tensorflow[and-cuda]>=2.20.0",
    "tiktoken>=0.12.0",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
